# niche-boy-advance

./: Cargo.toml
src/: emu.rs  macros.rs  main.rs  util.rs
src/cpu/: conditionals.rs  cpu.rs  emu.rs  interrupts.rs  mod.rs  opcodes.rs  register.rs
src/cpu/instructions/: add_u16.rs  and.rs  arithmetic.rs  bitwise.rs  call.rs  call_ret.rs  compare.rs  daa.rs  inc.rs  inc_dec.rs  jump.rs  load.rs  load_u16.rs  load_u8.rs  misc.rs  mod.rs  or.rs  res.rs  rotate.rs  stack.rs  stack_pointer.rs  xor.rs
src/cpu/instructions/prefix/: bitwise_util.rs  mod.rs  rotate.rs  shift.rs  swap.rs
src/gpu/: framebuffer.rs  gpu.rs  mod.rs
src/interrupts/: interrupts.rs
src/memory/: addresses.rs  bitsets.rs  memory.rs  memory_writers.rs  mod.rs
src/registers/: flags.rs  mod.rs  register.rs  register_pair.rs  registers.rs
