[package]
name = "niche_boy_advance"
version = "0.1.0"
authors = ["Dylan Jenkins <dylanljenkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.19", features = ["max_level_trace", "release_max_level_info"]}
#hex = "0.4.3"
minifb = "0.24.0"
pretty_env_logger = "0.5.0"

[profile.dev]
opt-level = 0
